--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,13 +2,36 @@
 <html>
 <head>
 <meta charset="utf-8">
+<!-- zoom scale at 100% for mobile devices -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Assignment Solution for Module 2</title>
 <link rel="stylesheet" type="text/css" href="css/styles.css"> 
-
 </head>
 <body>
+<!-- sample text from https://ca.lipsum.com/feed/html -->
 
+<h1>Our Menu</h1>
+<div class="row">
+	<div class="col-lg-4 col-md-6 col-sd-12" >
+		<section class="section-chicken">
+			<h2 id="title" class="chicken">Chicken</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sollicitudin nunc et nisl pretium tincidunt. Maecenas auctor eros in dictum tempus. Pellentesque lacinia suscipit massa sit amet commodo. Aenean laoreet felis eget mauris euismod fermentum. Fusce mi tellus, porttitor in porta egestas, tincidunt mattis nisl. Sed eu dui euismod, auctor nisi non, fringilla magna. Duis at dignissim lectus, vitae pulvinar est. Morbi vel placerat neque. Vivamus sagittis ex sed velit fringilla commodo. Aliquam venenatis efficitur ullamcorper. Aliquam convallis pretium nisi eget interdum.</p>
+		</section>	
+	</div>
 
+	<div class="col-lg-4 col-md-6 col-sd-12">
+		<section class="section-beef">
+			<h2 id="title" class="beef">Beef</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sollicitudin nunc et nisl pretium tincidunt. Maecenas auctor eros in dictum tempus. Pellentesque lacinia suscipit massa sit amet commodo. Aenean laoreet felis eget mauris euismod fermentum. Fusce mi tellus, porttitor in porta egestas, tincidunt mattis nisl. Sed eu dui euismod, auctor nisi non, fringilla magna. Duis at dignissim lectus, vitae pulvinar est. Morbi vel placerat neque. Vivamus sagittis ex sed velit fringilla commodo. Aliquam venenatis efficitur ullamcorper. Aliquam convallis pretium nisi eget interdum.</p>
+		</section>
+	</div>
+
+	<div class="col-lg-4 col-md-12 col-sd-12">
+		<section class="section-sushi">
+			<h2 id="title" class="sushi">Sushi</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sollicitudin nunc et nisl pretium tincidunt. Maecenas auctor eros in dictum tempus. Pellentesque lacinia suscipit massa sit amet commodo. Aenean laoreet felis eget mauris euismod fermentum. Fusce mi tellus, porttitor in porta egestas, tincidunt mattis nisl. Sed eu dui euismod, auctor nisi non, fringilla magna. Duis at dignissim lectus, vitae pulvinar est. Morbi vel placerat neque. Vivamus sagittis ex sed velit fringilla commodo. Aliquam venenatis efficitur ullamcorper. Aliquam convallis pretium nisi eget interdum.</p>
+		</section>
+	</div>
+</div>
 </body>
 </html>
