style for chicken section

--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -46,7 +46,7 @@
   </div>
 
   <div id="content" class="container-fluid">
-    <section>
+    <section id="sectionChicken" class="section-chicken">
       <h2>Chicken</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id ultricies turpis, a sagittis turpis. Fusce viverra urna in tincidunt fermentum. Phasellus interdum posuere viverra. Sed enim turpis, consequat in nunc ut, imperdiet fringilla neque. Nam eu arcu vitae ligula tincidunt euismod et quis nulla. Donec pharetra elementum velit, ut aliquam quam aliquet at. Pellentesque nec augue auctor, dapibus orci eu, elementum risus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nam commodo sodales tellus, vel lacinia nibh convallis at. Pellentesque hendrerit dignissim libero quis volutpat. Ut sapien massa, sodales at felis vel, aliquam euismod ex. Donec eu magna enim. Suspendisse sagittis ullamcorper dolor non vulputate. Maecenas gravida, quam vitae dapibus vestibulum, urna ex vehicula felis, sit amet tincidunt orci ligula sed nunc. Integer vulputate dictum leo non suscipit.
         Phasellus sit amet cursus erat, id suscipit erat. Donec eget eros elementum elit commodo rhoncus ac ac velit. Aliquam et faucibus ante, quis mattis mi. Ut porttitor placerat ligula tempus consectetur. Fusce eu blandit nisl, sed luctus mi. Nam sit amet auctor massa, non tempus nisl. Duis non molestie urna, vitae semper lorem. Duis scelerisque magna sodales tincidunt viverra.      
